--- a/News/Views/Home/About.cshtml
+++ b/News/Views/Home/About.cshtml
@@ -1,6 +1,38 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h1>@ViewData["Title"]</h1>
 
-    <h1>About Page</h1>
+
+<!-- ======= About Us Section ======= -->
+<section id="about" class="about">
+    <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+            <h2>About Us</h2>
+            <h3><b>HUDA MOKTAR HEIKAL </b></h3>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-6" data-aos="fade-right">
+                <img src="~/assets/img/huda.jpeg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
+                <h3>
+                    FULL STACK DEVELOPER
+                </h3>
+                <p class="fst-italic">
+                    Diligent software developer motivated by new experiences skilled in
+                    client-side web development, .NET framework, ASP.NET MVC, SQL
+                    database design.
+                    Worked on Restful API Server Using Node.js.
+                    Worked on a desktop application using Entity Framework
+                </p>
+                <ul>
+                    <li><i class="bi bi-check-circle"></i> 9 Month Professional Diploma.</li>
+                    <li><i class="bi bi-check-circle"></i> Bachelor of Information Technology.</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+</section><!-- End About Us Section -->
