--- a/News/Views/Home/Privacy.cshtml
+++ b/News/Views/Home/Privacy.cshtml
@@ -1,6 +1,35 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<br/>
+<br/>
+<div class="container">
+    <div class="section-title">
+        <h2>@ViewData["Title"]</h2>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 pt-4 pt-lg-0 content" >
+            <h3>
+                PRIVACY AND SECURITY
+            </h3>
+            <p class="fst-italic">
+                We, Mac For Promoting Commercial Business trading as Swarovski,a limited liability company duly organized under the laws of Egypt,
+                under the Commercial License number 281765, whose registered address is at Cairo, Egypt and whose paid share capital is
+                15,000,000 Egyptian Pounds (“we”, “us”, “ours”) respect the privacy of all of our users and are committed to protecting
+                information collected through the Website.
+            </p>
+            <ul>
+                <li> Information that you provide by filling out forms on the Website, including when you register, subscribe to any Services including but not limited to interactive services (such as blogs, chat rooms, message boards, or other user forums); enter a competition or promotion, complete a survey or report a problem with the Website: identification data, contact information, postal address, email address;</li>
+                <li> Your correct date of birth, which we may require that you submit accurately to ensure that you do not access the Website if you are not of a legal age to purchase products offered for sale on the Website;</li>
+                <li>Any information you may provide when you contact us or send us a correspondence;</li>
+                <li>Information necessary to process an order which is placed with us: your name, email address, phone numbers, home address, shipping and credit/debit card billing address(es);</li>
+                <li>Details of any transactions you carry out through the Website, including the placement of any orders by you: payment information (for example credit card details, or other payment details which you must provide to receive products you have ordered from us), connection data and your taste and preferences; and</li>
+            </ul>
+            <p>
+                You can access and review your Personal Information in the My Account section of the Website.
 
-<p>Use this page to detail your site's privacy policy.</p>
+                If your Personal Information changes in any way or is incorrectly presented on the Website you should immediately update or correct your Personal Information (as applicable) by accessing the My Account section on the Website or, alternatively, by contacting our Customer Service as detailed in Section 8 below.
+            </p>
+        </div>
+    </div>
+</div>
