--- a/News/Views/Home/ContactUs.cshtml
+++ b/News/Views/Home/ContactUs.cshtml
@@ -11,7 +11,6 @@
 
         <div class="section-title">
             <h2>Contact</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
     </div>
@@ -27,7 +26,7 @@
                         <div class="info-box">
                             <i class="bx bx-map"></i>
                             <h3>Our Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <p>Mit Ghamr, El Dakhlia, Egypt</p>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -41,7 +40,7 @@
                         <div class="info-box mt-4">
                             <i class="bx bx-phone-call"></i>
                             <h3>Call Us</h3>
-                            <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                            <p>+1 1111 111111 00<br>+0 0000 00000 00</p>
                         </div>
                     </div>
                 </div>
@@ -66,10 +65,9 @@
                     </div>
                     <div class="my-3">
                         <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
+                        <div id="mes" class="sent-message">Your message has been sent. Thank you!</div>
                     </div>
-                    <div class="text-center"><button type="submit">Send Message</button></div>
+                    <div class="text-center"><button onclick="Message();" type="submit">Send Message</button></div>
                 </form>
             </div>
 
@@ -77,3 +75,10 @@
 
     </div>
 </section><!-- End Contact Section -->
+@section scripts {
+    <script>
+        function Message() {
+            $('#mes').show();
+        }
+    </script>
+}
