--- a/News/Views/Home/ViewNews.cshtml
+++ b/News/Views/Home/ViewNews.cshtml
@@ -13,14 +13,14 @@
 
             <div class="row">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="~/assets/img/about.jpg" class="img-fluid" alt="">
+                    <img src="~/assets/img/@item.Image" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>@item.Title</h3>
                     <p class="fst-italic">
                         @item.Topic
                     </p>
-                   
+                   <span class="text-primary"> @item.Date </span>
                 </div>
             </div>
 
