--- a/News/Views/Shared/_Layout.cshtml
+++ b/News/Views/Shared/_Layout.cshtml
@@ -40,22 +40,23 @@
             <p></p>
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto " href="~/Home/Index">Home</a></li>
+                    <li><a class="nav-link scrollto text-left" href="~/Home/Index">Home</a></li>
                     <li><a class="nav-link scrollto" href="~/Home/About">About</a></li>
                     <li><a class="nav-link scrollto" href="~/Home/ContactUs">ContactUs</a></li>
                     <li><a class="nav-link scrollto" href="/Home/Privacy">Privacy</a></li>
+                    
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
-            <a href="//" class="appointment-btn scrollto"><span class="d-none d-md-inline">Register</span>&amp; Login</a>
+            <a href="//" class="appointment-btn scrollto "><span class="d-none d-md-inline">Register</span>&amp; Login</a>
 
         </div>
     </header><!-- End Header -->
     <main id="main">
-    <br />
-    <br />
-    <br/>
+        <br />
+        <br />
+        <br />
         @RenderBody()
 
     </main><!-- End #main -->
@@ -97,6 +98,7 @@
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
