--- a/News/wwwroot/assets/css/style.css
+++ b/News/wwwroot/assets/css/style.css
@@ -180,7 +180,7 @@ h1, h2, h3, h4, h5, h6 {
 * Appointment Button
 */
 .appointment-btn {
-  margin-left: 25px;
+  margin-left: 550px;
   background: #3fbbc0;
   color: #fff;
   border-radius: 4px;
@@ -1604,13 +1604,13 @@ section {
   padding: 12px 15px;
 }
 
-.Formemail button[type="submit"] {
-  background: #3fbbc0;
-  border: 0;
-  padding: 10px 30px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 4px;
+#btnsubmit {
+    background: #3fbbc0;
+    border: 0;
+    padding: 10px 30px;
+    color: #fff;
+    transition: 0.4s;
+    border-radius: 4px;
 }
 
  .Formemail button[type="submit"]:hover {
